# nasa_mars_sol_200_analysis

./: .gitignore  CHANGELOG.md  FINDINGS.md  LICENSE  README.md  RESEARCH_ROADMAP.md  SESSION_COMPLETE.md  metadata.json  pyproject.toml
config/: development.yml  logging.yml
data/raw/: RAD_RDR_2013_058_02_42_0200_V00.LBL  RDB_415201353ESD_0200_000_0000_M1.LBL
data/raw/mastcam/: 0200mr0000470000202840e01_drcx.lbl  0200mr0000470000202841d01_drcx.img  0200mr0000470000202841d01_drcx.lbl  0200mr0000470000202842d01_drcx.img  0200mr0000470000202842d01_drcx.lbl  0200mr0000470000202843e01_drcx.lbl  0200mr0000470000202844d01_drcx.img  0200mr0000470000202844d01_drcx.lbl  0200mr0000470000202845d01_drcx.img  0200mr0000470000202845d01_drcx.lbl  0200mr0000470000202846e01_drcx.lbl  0200mr0000470000202847d01_drcx.img  0200mr0000470000202847d01_drcx.lbl  0200mr0000470000202848d01_drcx.img  0200mr0000470000202848d01_drcx.lbl  (+56 more)
docs/: AI_ORIENTATION.md  CHANGELOG.md  DATABASE_SETUP.md  README.md
examples/: advanced_radiation_analysis.py  complete_analysis.py  mastcam_analysis.py  particle_classification.py  terrain_segmentation.py
notebooks/: README.md
src/: __init__.py  analysis.py  cli.py  findings.py  rad_parser.py  visualize.py
src/radiation/: __init__.py  dose_equivalent.py  let_spectrum.py  particle_classifier.py  pha_parser.py  visualize_spectrum.py
src/vision/: __init__.py  image_loader.py  segmentation.py  visualize_terrain.py
tests/: conftest.py  test_analysis.py  test_parser.py
tests/radiation/: __init__.py  test_dose_equivalent.py  test_let_spectrum.py
